data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_2039.wast
;; 10. **Loop Block with Pre-Unreachable**:     - Develop a loop block where a branch exiting the loop hits `unreachable`.     - Ensures handling of loops, exit, and continuation correctness.     - If control flow incorrectly continues post-loop, `unreachable` is hit.  By designing these differential tests, you can specifically evaluate unreachable code execution, revealing any subtleties in error handling and control flow management differences between WebAssembly and wizard_engine implementations.

(assert_invalid
  (module
    (func $loop-with-pre-unreachable
      (i32.const 1)
      (br_if 0 (unreachable))
      (loop (block (br 1)))
    )
  )
  "unreachable not handled correctly"
)